# ntp-sync-daemon

./: .gitignore  README.md  pyproject.toml
ntp_sync/: __init__.py  __main__.py  daemon.py  servers.py  sync.py
service/launchd/: com.rbgnr.ntp-sync-daemon.plist
service/systemd/: ntp-sync-daemon.service
service/windows/: install.ps1  uninstall.ps1
tests/: test_sync.py
